@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2928944 by drunken monkey: Removed assert() calls with string parameters.
 - #2923976 by Martijn Houtman, drunken monkey: Fixed facets with random sorting
   on Database backend.
 - #2921582 by chr.fritsch, drunken monkey: Fixed saving of "database_text" form
